# blot

./: AGENTS.md  BLOT_BLUEPRINT.md  BLOT_DATA_MODEL.md  BLOT_ROADMAP.md  BLOT_UI_MODEL.md  Cargo.toml  JOURNAL.md  README.md  com.watercolor.Blot.desktop
docs/: BLOT_V0.1_ALIGNMENT.md  WATER_FILE_FORMAT.md
src/: absorb.rs  app.rs  config.rs  external_file.rs  inbox.rs  known_workspaces.rs  launch.rs  main.rs  note_version.rs  ops.rs  paths.rs  place_note.rs  title.rs  water_file.rs  workspace.rs
src/document/: markdown.rs  mod.rs  model.rs  serialize.rs
src/search/: mod.rs  providers.rs  query.rs  ranking.rs  result.rs  snippet.rs
src/ui/: absorb_dialog.rs  command_palette.rs  compare_shell.rs  desk_shell.rs  editor_shell.rs  external_file_shell.rs  main_window.rs  merge_dialog.rs  mod.rs  modal_host.rs  place_note_dialog.rs  room_map_shell.rs  search_shell.rs  tab_bar.rs  version_history_shell.rs  water_workspace_shell.rs  workspace_shell.rs
tests/fixtures/: basic.water  broken_refs.water  malformed.water  multiple_palettes.water  unsupported_version.water
themes/: default.css
