[package]
name = "blot"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Local-first notes and .water workspace editor for the Watercolor suite."

[[bin]]
name = "blot"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
glib = "0.20"
gio = { version = "0.20", features = ["v2_72"] }
cairo = { package = "cairo-rs", version = "0.20" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
